force-app/main/default/objects/nFORCE__Route_Agreement__c/fields/LLC_BI__Application__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The application field is a lookup to Application so we can relate a terms agreement instance to its application</description>
    <label>Application</label>
    <referenceTo>LLC_BI__Application__c</referenceTo>
    <relationshipLabel>Route Agreements</relationshipLabel>
    <relationshipName>Route_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>