force-app/main/default/objects/nFORCE__Route_Agreement__c/fields/nFORCE__Agreed__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Agreed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This optional, admin-facing field stores whether the user has accepted the Terms and Conditions displayed on a particular route. The value is true if the user accepted the terms. The value is false if the user did not accept the terms.</description>
    <inlineHelpText>Select this checkbox if you accept the terms outlined in the document.</inlineHelpText>
    <label>Agreed</label>
    <type>Checkbox</type>
</CustomField>