force-app/main/default/objects/nFORCE__Route_Agreement__c/fields/nFORCE__Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Agreement_Date__c</fullName>
    <description>The date on which the user agreed to these terms.</description>
    <label>Agreement Date</label>
    <type>DateTime</type>
</CustomField>