force-app/main/default/objects/nFORCE__Route_Agreement__c/fields/nFORCE__User__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This optional, admin-facing field maps the document to the user who has agreed to the terms.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Route Agreements</relationshipLabel>
    <relationshipName>Route_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>